# swedish_puzzle_solver

./: .gitignore  README.md  pyproject.toml
src/swedish_puzzle_solver/: __init__.py  __main__.py  arrow_detector.py  image_processor.py  online_solver.py  util.py
